Separacion de destapacion y cerrajeria

--- a/cerrajero.html
+++ b/cerrajero.html
@@ -40,29 +40,29 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 <body>
 
 
-    <a onclick="gtag_report_conversion(url)" href="https://wa.me/541165718188" id="whatsapp-flotante" target="_blank"></a>
+    <a onclick="gtag_report_conversion(url)" href="https://wa.me/542235594042" id="whatsapp-flotante" target="_blank"></a>
 
 
     <header>
         <div class="top">
-            <p class="logo">DESTAPACIONES CAYETANO</p>
-            <p class="sub">El mejor servicio de Plomero</p>
+            <p class="logoB">DESTAPACIONES CAYETANO</p>
+            <p class="sub">El mejor servicio de Cerrajeria </p>
         </div>
     </header>
 
-    <section id="hero">
-        <h1>Servicio de Plomero y Destapaciones</h1>
-        <form action="https://wa.me/541165718188">
+    <section id="heroB">
+        <h1>Servicio de Cerrajeria</h1>
+        <form action="https://wa.me/542235594042">
          <button onclick="gtag_report_conversion(url)">Llamanos</button>
-         <p class="numero">11 6571-8188</p>
+         <p class="numero">22 3559-4042</p>
         </form>
     </section>
 
     <section id="nosotros">
         <div class="container">
-            <div class="img1"> 
+            <div class="img1">
             <h2>Sobre <span class="color-acento"> Nosotros</span></h2>
-            <p>Somos una empresa dedicada al servicio de <b>Plomeria y Destapaciones con maquina</b>. Ofrecemos soluciones de destapaciones con maquina, instalacion de termotanques, solucion a problermas de cañerias, colocacion de artefactos de baños y detencion de problemas tempranos.<br>No dude en llamarnos, muchos ya encontraron la solucion de sus problemas con nosotros. </br></p>
+            <p>Somos una empresa dedicada al servicio de <b>Cerrajeria</b>. Donde ofrecemos <b>reparacion de cerraduras</b>, <b>aperturas de puertas tanto de hogares como de vehiculos</b>.<br>No dude en llamarnos, muchos ya encontraron la solucion de sus problemas con nosotros. </br></p>
             </div>
         </div>
     </section>
@@ -71,17 +71,17 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container">
              <div class="muestras">
                 <h2>Nuestros <span class="color-acento"> Servicios</span></h2>
-                 <div class="carta1">
-                    <h3>Plomeria</h3>
-                     <p class="texto-servi">Tenemos personal capacitado para realizar cualquier tipo de trabajo de plomeria. Realizamos reparaciones de fugas, instalacion de artefactos de baño, instalacion y reparacion de griferias. </p>
+                 <div class="carta1B">
+                    <h3>Cerrajeria Automotor</h3>
+                     <p class="texto-servi">Contamos con un equipo de cerrajeros altamente capacitados y especializados en todo tipo de trabajos de cerrajería para automotores. Brindamos servicios rápidos y confiables, incluyendo: Apertura de puertas y baúles de vehículos de manera segura y sin causar daños. Copia de llaves al instante, utilizando tecnología de precisión para garantizar que las copias funcionen perfectamente desde el primer momento. </p>
                     </div>
-                <div class="carta2">
-                    <h3>Destapaciones</h3>
-                     <p class="texto-servi">Realizamos destapaciones con maquina. Desobstrucción de cañerias con el mejor y mas eficiente sistema. Libera rapidamente el circuito de desague.</p>
+                <div class="carta2B">
+                    <h3>Cerrajeria Hogar</h3>
+                     <p class="texto-servi">Contamos con un equipo de cerrajeros altamente capacitados y especializados en brindar soluciones integrales para la seguridad de tu hogar. Entre nuestros principales servicios se incluyen: Apertura de puertas garantizando una apertura segura y sin daños. Cambio de cerraduras adaptándonos a diferentes modelos y necesidades. Copia de llaves al instante.</p>
                     </div>
-                <div class="carta3">
+                <div class="carta3B">
                     <h3>Service ON</h3>
-                    <p class="texto-servi">Nuestros servicios alcanzan todo tipo de complejos, desde un hogar particular a empresas, brindandoles atencion las 24 hs y los 365 dias del año.</p>
+                    <p class="texto-servi">Nuestros servicios alcanzan todo tipo de situacion, desde un hogar particular, empresas o vehiculo, brindandoles atencion las 24 hs y los 365 dias del año.</p>
                 </div>
             </div>
         </div>
@@ -104,15 +104,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container">
             <div class="final">
             <h2><span class="color-acento2"> Recuerde</span> <br><span class="color-acento"> Nuestro Numero</span></br></h2>
-            <form action="https://wa.me/541165718188">
+            <form action="https://wa.me/542235594042">
                 <button onclick="gtag_report_conversion(url)">Llamanos</button>
                </form>
-            <p class="numero2">11 6571-8188</p>
+            <p class="numero2">22 3559-4042</p>
             <div class="mfinal">
             <p class="mmf">Atendemos todas las zonas. Zona norte , Zona capital federal ( caba ), 
-                Zona oeste, Zona sur y costa Atlantica. Recuerde realizamos los mejores servicios de <b>Plomeria y 
-                Destapaciones con maquina las 24 horas los 365 dias del año.</b> <br></br><br>No dude en comunicarse 
-                con nosotros. Ofrecemos el mejor servicio de <b>plomeria y Destapaciones</b>.</br><br></br></p>
+                Zona oeste, Zona sur y costa Atlantica. Recuerde realizamos los mejores servicios de <b>cerrajeria las 24 horas los 365 dias del año.</b> <br></br><br>No dude en comunicarse 
+                con nosotros. Ofrecemos el mejor servicio de <b>cerrajeria</b>.</br><br></br></p>
             </div>
             <!-- <div class="der">
                 <ul>
@@ -132,8 +131,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     <li>Plomero en zona Sur</li>
                     <li>Destapaciones en costa atlantica</li>
                 </ul>
-            </div>
-        </div> -->
+            </div> -->
+        </div>
             <p class="nombre">by YetiWebDesing(2025)</p>
         </div>
     </section>
