--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                      <p class="texto-servi">Realizamos destapaciones con maquina. Desobstrucción de cañerias con el mejor y mas eficiente sistema. Libera rapidamente el circuito de desague.</p>
                     </div>
                 <div class="carta3">
-                    <h3>Service ON</h3>
+                    <h3>Calderas y Calefaccion</h3>
                     <p class="texto-servi">Nuestros servicios alcanzan todo tipo de complejos, desde un hogar particular a empresas, brindandoles atencion las 24 hs y los 365 dias del año.</p>
                 </div>
             </div>
