--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="container">
             <div class="img1"> 
             <h2>Sobre <span class="color-acento"> Nosotros</span></h2>
-            <p>Somos una empresa dedicada al servicio de <b>Plomeria y Destapaciones con maquina</b>. Ofrecemos soluciones de destapaciones con maquina, instalacion de termotanques, solucion a problermas de cañerias, colocacion de artefactos de baños y detencion de problemas tempranos.<br>No dude en llamarnos, muchos ya encontraron la solucion de sus problemas con nosotros. </br></p>
+            <p>Somos una empresa dedicada al servicio de <b>Plomeria y Destapaciones con maquina</b>. Ofrecemos soluciones de destapaciones con maquina, instalacion de termotanques, solucion a problermas de cañerias, colocacion de artefactos de baños y detencion de problemas tempranos.<br>No dude en llamarnos, muchos ya encontraron la solucion de sus problemas con nosotros. </p>
+            <p><span class="color-acento"> Servicio técnico especializado en calderas, estufas y calefacción. Detectamos y reparamos fallas, realizamos mantenimiento preventivo y dejamos tu sistema funcionando como nuevo. Atendemos urgencias y trabajamos con todas las marcas.</span></br></p>
             </div>
         </div>
     </section>
@@ -81,7 +82,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     </div>
                 <div class="carta3">
                     <h3>Calderas y Calefaccion</h3>
-                    <p class="texto-servi">Nuestros servicios alcanzan todo tipo de complejos, desde un hogar particular a empresas, brindandoles atencion las 24 hs y los 365 dias del año.</p>
+                    <p class="texto-servi">Realizamos reparación y mantenimiento de calderas, estufas y sistemas de calefacción. Solucionamos fallas, optimizamos el rendimiento y aseguramos un funcionamiento seguro. Servicio rápido, eficiente y garantizado para que no pases frío.</p>
                 </div>
             </div>
         </div>
