--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
       return false;
     }
     </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-314110373"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-314110373');
+</script>
 
 </head>
 <body>
@@ -45,7 +54,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 
     <header>
         <div class="top">
-            <p class="logo">DESTAPACIONES CAYETANO</p>
+            <p class="logo">MANTENIMIENTO CAYETANO</p>
             <p class="sub">El mejor servicio de Plomero</p>
         </div>
     </header>
